@@ -1,3 +1,8 @@
+2013-04-10 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
+	  STM8: END_FUNCTION stack adjustment fix.
+
 2013-04-09 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
